docs: Add light/dark mode toggle to mkdocs.yml
This change introduces a light/dark mode toggle to the documentation site,
improving accessibility and user experience for users who prefer different
reading environments.

- Adds `scheme: default` (light mode) alongside `scheme: slate` (dark mode).
- Configures `toggle` icons using `material/brightness-7` and `material/brightness-4`.
- Preserves brand colors (`primary: black`, `accent: amber`) for both schemes.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,9 +7,21 @@ theme:
         - header.autohide
         - content.code.copy
     palette:
+        # Palette toggle for light mode
+        - scheme: default
+          primary: black
+          accent: amber
+          toggle:
+            icon: material/brightness-7
+            name: Switch to dark mode
+
+        # Palette toggle for dark mode
         - scheme: slate
           primary: black
           accent: amber
+          toggle:
+            icon: material/brightness-4
+            name: Switch to light mode
     icon:
         repo: fontawesome/brands/github
     logo: "_static/logo/logo.svg"
